added icon selectmenu

--- a/visualisation/css/widget.css
+++ b/visualisation/css/widget.css
@@ -343,6 +343,17 @@ div[data-role="current_weather"] img{
 
 
 
+/*****************************************************************************/
+/*                     Chart                                                 */
+/*****************************************************************************/
+div[data-role="chart"]{
+	width: 98%;
+	position: relative;
+	margin-bottom: 5px;
+}
+#home_pagebuilder div[data-role="chart"]{
+	border: solid 1px #222;
+}
 
 
 /*----------------------------------------------------------------------------------*/
