--- a/visualisation/css/widget.css
+++ b/visualisation/css/widget.css
@@ -1,10 +1,20 @@
 /*
-// 
-// widget.css is part of KNXControl
-// @author: Brecht Baeten
-// @license: GNU GENERAL PUBLIC LICENSE
-// 
-//
+    Copyright 2015 Brecht Baeten
+    This file is part of KNXControl.
+
+    KNXControl is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    KNXControl is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with KNXControl.  If not, see <http://www.gnu.org/licenses/>.
+*/
 
 /*****************************************************************************/
 /*                     General                                               */
@@ -353,6 +363,11 @@ div[data-role="chart"]{
 }
 #home_pagebuilder div[data-role="chart"]{
 	border: solid 1px #222;
+}
+#home_pagebuilder div[data-role="chart"] a.edit_widget{
+	z-index: 1;
+    top: -5px;
+	right: -5px;
 }
 
 
