--- a/visualisation/css/widget.css
+++ b/visualisation/css/widget.css
@@ -35,6 +35,31 @@ a.edit_page{
 }
 
 /*****************************************************************************/
+/*                     Separator line                                        */
+/*****************************************************************************/
+div[data-role="line"]{
+	display: block;
+	position: relative;
+	height: 1px;
+	margin-top: 5px;
+	margin-bottom: 5px;
+	width: 98%;
+}
+div[data-role="line"].line{
+	border-bottom: solid 1px #ddd;
+}
+#home_pagebuilder div[data-role="line"]{
+	height: 5px;
+	border-bottom: solid 1px #444;
+}
+#home_pagebuilder div[data-role="line"].line{
+	border-bottom: solid 1px #ddd;
+}
+#home_pagebuilder div[data-role="line"] a.edit_widget{
+    top: -15px;
+	right: -5px;
+}
+/*****************************************************************************/
 /*                     Light switch                                          */
 /*****************************************************************************/
 div[data-role="lightswitch"]{
@@ -43,6 +68,8 @@ div[data-role="lightswitch"]{
 	height: 50px;
 	width: 49%;
 	min-width: 200px;
+	text-align: left;
+	float: left;
 }
 div[data-role="lightswitch"] a{
 	text-decoration: none;
@@ -370,6 +397,35 @@ div[data-role="chart"]{
 	right: -5px;
 }
 
+/*****************************************************************************/
+/*                     Button                                                */
+/*****************************************************************************/
+div[data-role="btn"]{
+    display: inline-block;
+    position: relative;
+    margin: 0;
+    width: 24.5%;
+    min-width: 120px;
+}
+div[data-role="btn"] a{
+    margin: 0;
+    margin-right: -5px;
+    margin-bottom: -5px;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+div[data-role="btn"] img{
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    top: 5px;
+    left: 5px;
+}
+#home_pagebuilder div[data-role="btn"] a.edit_widget{
+	z-index: 1;
+    top: -5px;
+	right: -5px;
+}
 
 /*----------------------------------------------------------------------------------*/
 /*     setpoint                                                                     */
