--- a/visualisation/css/layout.css
+++ b/visualisation/css/layout.css
@@ -158,7 +158,9 @@ div.def div.move{
 section>div.ui-collapsible-content{
 	text-align: center;
 }
-
+label{
+	text-align: left;
+}
 
 @media all and (min-width: 800px) {
 	div [data-role="content"]{
