added smarthome.py weather loading and updated weather widget

--- a/visualisation/css/layout.css
+++ b/visualisation/css/layout.css
@@ -155,7 +155,7 @@ div.def div.move{
 	right: 10px;
 	font-weight: 600;
 }
-section>div.ui-collapsible-content{
+.ui-content section{
 	text-align: center;
 	line-height: 1em;
 }
