fixed smooth scrolling on touch

--- a/visualisation/css/layout.css
+++ b/visualisation/css/layout.css
@@ -136,6 +136,9 @@ div.def div.move{
 /*****************************************************************************/
 /*                     Content                                               */
 /*****************************************************************************/
+div[data-role="page"]{
+	-webkit-overflow-scrolling: touch;
+}
 .ui-content header{
 	position: relative;
 }
