tried to fix scrolling panel in pagebuilder but no success

--- a/visualisation/css/layout.css
+++ b/visualisation/css/layout.css
@@ -93,6 +93,9 @@
 		-webkit-transform: none !important;
 		transform: none !important;
 	}
+	.ui-panel-closed{
+		max-height: 1000% !important;
+	}
 }
 
 #rendermenu section{
