--- a/visualisation/css/widget.css
+++ b/visualisation/css/widget.css
@@ -62,6 +62,45 @@ div[data-role="line"].line{
     top: -15px;
 	right: -5px;
 }
+
+/*****************************************************************************/
+/*                     Slider                                                */
+/*****************************************************************************/
+div[data-role="setpoint"]{
+	display: inline-block;
+	position: relative;
+	height: 60px;
+	width: 98%;
+	text-align: left;
+}
+div[data-role="setpoint"] p{
+	position: absolute;
+	margin-left: 54px;
+	margin-top: 5px;
+	font-weight: 700;
+}
+div[data-role="setpoint"] .ui-slider{
+	margin-left: 64px;
+	margin-right: 64px;
+	margin-top: 25px;
+	margin-bottom: 0;
+}
+div[data-role="setpoint"] .ui-slider-track{
+	margin-left: 0;
+	margin-right: 0;
+}
+div[data-role="setpoint"] .ui-slider input{
+	visibility: hidden;
+}
+
+#home_pagebuilder div[data-role="setpoint"]{
+	border: solid 1px #222;
+}
+#home_pagebuilder div[data-role="setpoint"] a.edit_widget{
+    top: -5px;
+	right: -5px;
+}
+
 /*****************************************************************************/
 /*                     Light switch                                          */
 /*****************************************************************************/
@@ -151,6 +190,9 @@ div[data-role="shading"]{
 	height: 70px;
 	width: 98%;
 	text-align: left;
+}
+div[data-role="shading"][data-advanced="true"]{
+	height: 100px;
 }
 div[data-role="shading"] img{
 	height: 50px;
