--- a/visualisation/css/widgets_base.css
+++ b/visualisation/css/widgets_base.css
@@ -16,9 +16,9 @@
     along with HomeCon.  If not, see <http://www.gnu.org/licenses/>.
 */
 
-/*****************************************************************************/
-/*                     General                                               */
-/*****************************************************************************/
+/******************************************************************************/
+/*                     pagebuilder                                            */
+/******************************************************************************/
 a.edit_widget{
 	position: absolute;
 	margin: 0;
@@ -33,21 +33,13 @@ a.edit_page{
 	position: absolute;
 	margin: 0;
 }
-div[data-role="fieldcontain"]{
-	padding: .1em 0;
+#home_pagebuilder div.widget{
+	border: solid 1px #222;
 }
-
-div.twocols{
-	display: inline-block;
-	float: left; 
-	width: 49%;
-	margin: 0;
-}
-div.threecols{
-	display: inline-block;
-	float: left; 
-	width: 32%;
-	margin: 0;
+#home_pagebuilder div.widget a.edit_widget{
+	z-index: 1005;
+    top: -5px;
+	right: -5px;
 }
 
 /******************************************************************************/
@@ -66,14 +58,9 @@ div[data-role="line"].line{
 }
 #home_pagebuilder div[data-role="line"]{
 	height: 5px;
-	border-bottom: solid 1px #444;
 }
 #home_pagebuilder div[data-role="line"].line{
 	border-bottom: solid 1px #ddd;
-}
-#home_pagebuilder div[data-role="line"] a.edit_widget{
-    top: -15px;
-	right: -5px;
 }
 
 /******************************************************************************/
@@ -84,6 +71,34 @@ div[data-role="line"].line{
 /******************************************************************************/
 /*                     input value                                            */
 /******************************************************************************/
+div[data-role="inputvalue"]{
+	display: inline-block;
+	position: relative;
+	height: 65px;
+	width: 98%;
+	text-align: left;
+}
+div[data-role="inputvalue"] p.label{
+	position: absolute;
+	margin-left: 54px;
+	margin-top: 5px;
+	font-weight: 700;
+}
+
+div[data-role="inputvalue"] div.ui-input-text{
+	position: absolute;
+	margin-left: 54px;
+	margin-top: 24px;
+	margin-bottom: 0px;
+	width: 150px;
+}
+div[data-role="inputvalue"] p.unit{
+	position: absolute;
+	margin-top: 30px;
+	margin-left: 214px;
+	margin-bottom: 0px;
+
+}
 
 /******************************************************************************/
 /*                     value switch                                           */
@@ -123,11 +138,6 @@ div[data-role="pushbutton"] img{
     height: 30px;
     top: 5px;
     left: 5px;
-}
-#home_pagebuilder div[data-role="pushbutton"] a.edit_widget{
-	z-index: 1;
-    top: -5px;
-	right: -5px;
 }
 
 /******************************************************************************/
@@ -205,14 +215,6 @@ div[data-role="clock"]  hr{
 div[data-role="clock"] .date{
 	margin-top: 0;
 	margin-bottom: 0;
-}
-#home_pagebuilder div[data-role="clock"]{
-	margin-bottom: 5px;
-	border: solid 1px #222;
-}
-#home_pagebuilder div[data-role="clock"] a.edit_widget{
-    top: -5px;
-	right: -5px;
 }
 
 
